<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dashihui.afford.ui.activity.my.AtySetAbout">

    <RelativeLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@drawable/top_bg">

        <ImageButton
            android:id="@+id/my_address_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:paddingBottom="@dimen/dip_16"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_24"
            android:paddingTop="@dimen/dip_16"
            android:src="@drawable/ico_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_aboutour"
            android:textColor="@color/confirmorder_title"
            android:textSize="@dimen/confirmorder_title"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_title"
        android:layout_marginTop="@dimen/dip_60"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/about_icon_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_10"
            android:text="@string/about_intimate"
            android:textColor="@color/personal_textview"
            android:textSize="@dimen/personal_textview" />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_10"
            android:text="@string/versionName"
            android:textColor="@color/personal_textview"
            android:textSize="@dimen/personal_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_20"
            android:text="@string/about_agreement"
            android:textColor="@color/personal_textview"
            android:textSize="@dimen/personal_textview"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_16"
            android:text="@string/about_welcome"
            android:textColor="@color/personal_textview"
            android:textSize="@dimen/personal_textview"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dip_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_10"
            android:text="@string/about_copyright"
            android:textColor="@color/personal_hinttext"
            android:textSize="@dimen/size12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright1"
            android:textColor="@color/personal_hinttext"
            android:textSize="@dimen/size12" />
    </LinearLayout>

</RelativeLayout>
